# fastapi-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  {% if cookiecutter.use_alembic %}alembic.ini{% endif %}
{{cookiecutter.project_slug}}/backend/src/: main.py
{{cookiecutter.project_slug}}/backend/src/apps/health/: routes.py
{{cookiecutter.project_slug}}/backend/src/container/: lifecycle.py
{{cookiecutter.project_slug}}/backend/src/container/core/: db.py  dependencies.py
{{cookiecutter.project_slug}}/backend/src/core/: schemas.py
{{cookiecutter.project_slug}}/backend/src/core/config/: __init__.py  base.py  dev.py  prod.py  test.py
{{cookiecutter.project_slug}}/backend/src/core/db/: __init__.py  engine.py  repository.py
{{cookiecutter.project_slug}}/backend/src/shared/schemas/: pagination.py  responses.py
{{cookiecutter.project_slug}}/backend/tests/unit/health/: test_routes.py
{{cookiecutter.project_slug}}/backend/{% if cookiecutter.use_alembic %}migrations{% endif %}/: {% if cookiecutter.use_alembic %}env.py{% endif %}
