[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
{%- if cookiecutter.license == "MIT" %}
license = { text = "MIT" }
{%- elif cookiecutter.license == "Apache-2.0" %}
license = { text = "Apache-2.0" }
{%- elif cookiecutter.license == "BSD-3-Clause" %}
license = { text = "BSD-3-Clause" }
{%- else %}
license = { text = "Proprietary" }
{%- endif %}

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    {%- if cookiecutter.database == "postgres" %}
    "asyncpg>=0.30",
    {%- else %}
    "aiosqlite>=0.20",
    {%- endif %}
    {%- if cookiecutter.use_alembic %}
    "alembic>=1.14",
    {%- endif %}
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"
force-exclude = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "RUF",
    "ARG",
    "PT",
    "RET",
    "ASYNC",
    "LOG",
    "PIE",
    "PTH",
    "N",
    "A",
    "BLE",
    "ISC",
    "PERF",
    "PGH",
    "Q",
    "RSE",
    "T10",
]
extend-ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
{%- if cookiecutter.use_alembic %}
exclude = ["migrations/"]
{%- endif %}

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
